{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "0bfe5791-d85b-4ba3-bff6-00a785c70d87",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f3547040-3da3-49aa-a13c-bd7b47ba9f2e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "d4ae8e51-90c3-4f6b-a76a-0b3ab39ace6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrabLeft",
                    "type": "Button",
                    "id": "c32127a6-8e02-4e8d-99f8-b0177d6e5a48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrabRight",
                    "type": "Button",
                    "id": "294d4942-fcd7-46fd-9da6-ef29fc144a5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PunchLeft",
                    "type": "Button",
                    "id": "d859f14c-7806-4776-89db-d11fc1cfc4cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PunchRight",
                    "type": "Button",
                    "id": "24f3a8d9-cebf-4a19-aaf6-c6e06e2e1167",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HorizontalLook",
                    "type": "Value",
                    "id": "3e881ba1-88e4-4dd4-80d6-d7e9f6fcff77",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "6b6e200b-9f09-43fb-87be-875c5ee366e5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "45c06ab7-88e5-4262-8949-6ddbd3401198",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dad2aae3-683b-48f9-8cd9-44fb4de48977",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7db4e030-8489-4366-a761-697b1a684283",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fad1f66c-45ce-4bc6-bf1f-8bca8b9401bd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Keys",
                    "id": "456651c1-6aba-4c73-befd-e645f352d3dd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "435e18c5-1fa4-4cac-a9f0-de9b63a67341",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c09dab0a-924f-4c27-b9a2-1d317be4e146",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "be950046-9fb0-4163-9d13-5eb081d97ed1",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f0d94bb4-819c-467e-a722-8e44b623db4c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ca225242-8af5-46b2-b5e3-8368c9f6c752",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52ec2e62-f367-43d7-b2ee-22e5779366f0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19dd8f77-63b7-4ace-adc8-608c7c8ff192",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae52d58a-9271-484d-bebd-ee2221325848",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f4e1c6e-b3b6-4a65-a328-a8f325135921",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d02154d-1f80-45e0-a37d-fa126ab62323",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}